--- a/index.html
+++ b/index.html
@@ -507,5 +507,6 @@ https://templatemo.com/tm-531-reflux
         checkSection();
       });
     </script>
+    <script src="./assets/js/form.js"></script>
   </body>
 </html>
